_/k8s/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: fizcultor
  labels:
    app.kubernetes.io/part-of: fizcultor
    name: fizcultor
